# -script-editor

./: .gitignore  README.md  main.py
C++/visual_novel_editor/: CMakeLists.txt  README.md
C++/visual_novel_editor/src/: main.cpp
C++/visual_novel_editor/src/export/: CMakeLists.txt  ExporterRenpy.cpp  ExporterRenpy.h  ScriptFormatter.cpp  ScriptFormatter.h
C++/visual_novel_editor/src/gui/: CMakeLists.txt  EdgeItem.cpp  EdgeItem.h  GraphScene.cpp  GraphScene.h  Icons.qrc  LanguageManager.cpp  LanguageManager.h  MainWindow.cpp  MainWindow.h  NodeInspectorWidget.cpp  NodeInspectorWidget.h  NodeItem.cpp  NodeItem.h  ScriptEditorDialog.cpp  ScriptEditorDialog.h
C++/visual_novel_editor/src/gui/presenter/: ProjectPresenter.cpp  ProjectPresenter.h  ViewInterfaces.h
C++/visual_novel_editor/src/model/: CMakeLists.txt  Choice.cpp  Choice.h  Project.cpp  Project.h  StoryNode.cpp  StoryNode.h  Utilities.h
C++/visual_novel_editor/tests/: CMakeLists.txt  ProjectPresenterTests.cpp
gui/: auto_save_dialog.py  edge_item.py  main_window.py  node_item.py  scene_view.py
model/: document_manager.py  project_io.py  undo_commands.py
src/gui/commands/: __init__.py  nodes.py
yuuka-ai/: README.md  preprocess_data.py  train_lora.py
yuuka-ai/data/: yuuka_dialogues_zh.jsonl.example
yuuka-ai/scripts/: chat_cli.py  preprocess_data.py  train_lora.py
